Main pages added, suspense in /search added.

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,7 +1,7 @@
 {
 	"header": {
 		"components": "COMPONENTES",
-		"accessories": "ACCESORIOS",
+		"accesories": "ACCESORIOS",
 		"peripherals": "PERIFÉRICOS"
 	}
 }
