--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,7 +1,7 @@
 {
 	"header": {
 		"components": "COMPONENTS",
-		"accessories": "ACCESORIES",
+		"accesories": "ACCESORIES",
 		"peripherals": "PERIPHERALS"
 	}
 }
