--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,5 +1,5 @@
 {
-	"suspense": "Cargando...",
+	"suspense": "Cargando",
 	"header": {
 		"components": "COMPONENTES",
 		"accesories": "ACCESORIOS",
