Mobile header ready, need to implement navigation

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,3 +1,12 @@
 {
-	"loadingScreen": "Cargando"
+	"loadingScreen": "Cargando",
+	"header": {
+		"nav": {
+			"components": "COMPONENTES",
+			"accessories": "ACCESORIOS",
+			"peripherals": "PERIFÉRICOS"
+		},
+		"language": "IDIOMA",
+		"searchBar": "Buscar..."
+	}
 }
