--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,3 +1,12 @@
 {
-	"loadingScreen": "Loading"
+	"loadingScreen": "Loading",
+	"header": {
+		"nav": {
+			"components": "COMPONENTS",
+			"accessories": "ACCESSORIES",
+			"peripherals": "PERIPHERALS"
+		},
+		"language": "LANGUAGE",
+		"searchbar": "Search..."
+	}
 }
