Mobile drawer ready to go.
- NavLink added to buttons.
- Route OK.
- Removed styled components, used inline style from MUI instead.

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -2,9 +2,18 @@
 	"loadingScreen": "Loading",
 	"header": {
 		"nav": {
-			"components": "COMPONENTS",
-			"accessories": "ACCESSORIES",
-			"peripherals": "PERIPHERALS"
+			"components": {
+				"label": "COMPONENTS",
+				"url": "components"
+			},
+			"accessories": {
+				"label": "ACCESSORIES",
+				"url": "accessories"
+			},
+			"peripherals": {
+				"label": "PERIPHERALS",
+				"url": "peripherals"
+			}
 		},
 		"language": "LANGUAGE",
 		"searchbar": "Search...",
