--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -2,9 +2,18 @@
 	"loadingScreen": "Cargando",
 	"header": {
 		"nav": {
-			"components": "COMPONENTES",
-			"accessories": "ACCESORIOS",
-			"peripherals": "PERIFÉRICOS"
+			"components": {
+				"label": "COMPONENTES",
+				"url": "components"
+			},
+			"accessories": {
+				"label": "ACCESORIOS",
+				"url": "accessories"
+			},
+			"peripherals": {
+				"label": "PERIFÉRICOS",
+				"url": "peripherals"
+			}
 		},
 		"language": "IDIOMA",
 		"searchbar": "Buscar...",
