--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -4,15 +4,15 @@
 		"nav": {
 			"components": {
 				"label": "COMPONENTS",
-				"url": "components"
+				"url": "/components"
 			},
 			"accessories": {
 				"label": "ACCESSORIES",
-				"url": "accessories"
+				"url": "/accessories"
 			},
 			"peripherals": {
 				"label": "PERIPHERALS",
-				"url": "peripherals"
+				"url": "/peripherals"
 			}
 		},
 		"language": "LANGUAGE",
