Added new translations
- Accessories added
- Peripherals added

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -32,5 +32,11 @@
 	"components": {
 		"label": "Components",
 		"manufacturer": "Manufacturer"
+	},
+	"accessories": {
+		"label": "Accessories"
+	},
+	"peripherals": {
+		"label": "Peripherals"
 	}
 }
