--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -32,5 +32,11 @@
 	"components": {
 		"label": "Componentes",
 		"manufacturer": "Fabricante"
+	},
+	"accessories": {
+		"label": "Accesorios"
+	},
+	"peripherals": {
+		"label": "Periféricos"
 	}
 }
