Added manufacturer translation

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -30,13 +30,13 @@
 		}
 	},
 	"components": {
-		"label": "Components",
-		"manufacturer": "Manufacturer"
+		"label": "Components"
 	},
 	"accessories": {
 		"label": "Accessories"
 	},
 	"peripherals": {
 		"label": "Peripherals"
-	}
+	},
+	"manufacturer": "Manufacturer"
 }
