--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -30,13 +30,13 @@
 		}
 	},
 	"components": {
-		"label": "Componentes",
-		"manufacturer": "Fabricante"
+		"label": "Componentes"
 	},
 	"accessories": {
 		"label": "Accesorios"
 	},
 	"peripherals": {
 		"label": "Periféricos"
-	}
+	},
+	"manufacturer": "Fabricante"
 }
