--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -38,5 +38,15 @@
 	"peripherals": {
 		"label": "Peripherals"
 	},
-	"manufacturer": "Manufacturer"
+	"manufacturer": "Manufacturer",
+	"showMore": "Show more",
+	"showLess": "Show less",
+	"addToCart": "Add to cart",
+	"productData": "Product information",
+	"product": {
+		"name": "Name",
+		"itemModelNumber": "Item model number",
+		"size": "Dimesions",
+		"weight": "Weight"
+	}
 }
