--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -38,5 +38,15 @@
 	"peripherals": {
 		"label": "Periféricos"
 	},
-	"manufacturer": "Fabricante"
+	"manufacturer": "Fabricante",
+	"showMore": "Ver más",
+	"showLess": "Ver menos",
+	"addToCart": "Agregar al carrito",
+	"productData": "Información del producto",
+	"product": {
+		"name": "Nombre",
+		"itemModelNumber": "Número de modelo",
+		"size": "Dimensiones",
+		"weight": "Peso"
+	}
 }
