Products data updated
Spanish translation needed

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -46,7 +46,7 @@
 	"product": {
 		"name": "Name",
 		"itemModelNumber": "Item model number",
-		"size": "Dimesions",
+		"size": "Dimensions",
 		"weight": "Weight"
 	}
 }
