Drawer ready to go

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,5 +1,8 @@
 {
 	"landing": {
 		"welcome": "¡Bienvenido a Gamering!"
-	}
+	},
+	"components": "Components",
+	"accessories": "Accessories",
+	"peripherals": "Peripherals"
 }
