--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,5 +1,8 @@
 {
 	"landing": {
 		"welcome": "Welcome to Gamering!"
-	}
+	},
+	"components": "Components",
+	"accessories": "Accessories",
+	"peripherals": "Peripherals"
 }
